# template_utils

./: README.md
cmakeTemplate/: CMakeLists.txt  README.md
gccTemplate/: template  template.cpp
